    - WoopsiString::getCharAt() returns NULL if index is out of valid range.
    - Removed "Loading" message from FileListBox.
    - Fix to ScrollingListBox scrollbar grip size.
    - Support for 1 or 2 of physical displays (helps with SDL ports to other
      platforms).
    - Compiler warning fixes.
    - MultiLineTextBox scrolls to follow cursor when text is inserted.

  V0.99.5 (20100916)
  
  - Fixes:
    - Removed freetype classes, library and example (Lakedaemon's distro will
      provide this functionality).
    - Examples build script uses for loop instead of explicitly named folders.
    - Gadget::checkCollision(Gadget) works correctly.
    - Tests build script uses for loop instead of explicitly named folders.
    - Fixed memory leaks in Text::getLineTrimmedLength().
    - Rewrote RectCache::splitRectangles() for speed and clarity.
    - Increased delays for SDL double click and key repeat times.
    - Fixed memory leak in demo.
    - Fixed memory leak in PackedFontBase::getStringWidth().
    - Fixed memory leak in MultiLineTextBox::moveCursorToPosition().
    - ScrollingPanel::scroll() redraws correctly on top screen.
    - Renamed Text class to Document.
    - Document class contains a WoopsiString instead of inheriting from it.
    - Removed DimmedScreen class (not compatible with new rendering system).
    - Removed erased flag from Gadget.
    - Removed Gadget::erase().
    - Removed Gadget::eraseGadget().
    - Removed Gadget::redraw().
    - Removed Gadget::redrawDirty().
    - Removed Gadget::drawChildren().
    - Removed Gadget::redrawDirtyChildren().
    - ListData destructor does not fire list changed events.
    - Removed AmigaWindow::redrawBorder().
    - Removed Woopsi::eraseRect().
    - Gadget::getChild() no longer returns a const gadget.
    - Removed visibleRegionCacheInvalid flag from gadget.
    - Removed Gadget::enableDrawing().
    - Removed Gadget::disableDrawing().
    - Removed drawingEnabled flag from Gadget.